@@ -14,9 +14,6 @@ package biz.source_code.dsp.sound;
 
 import biz.source_code.dsp.filter.IirFilter;
 import biz.source_code.dsp.filter.IirFilterCoefficients;
-import java.io.InputStream;
-import java.io.IOException;
-import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioInputStream;
 
 /**
@@ -35,61 +32,15 @@ private IirFilterAudioInputStream() {}
 * Returns an AudioInputStream that supplies the filtered audio signal.
 *
 * @param in
-*    the input AudioInputStream.
+*    The input AudioInputStream.
 * @param coeffs
 *    The IIR filter coefficients.
 */
 public static AudioInputStream getAudioInputStream (AudioInputStream in, IirFilterCoefficients coeffs) {
-   FilterStream filterStream = new FilterStream(in, coeffs);
-   return new AudioInputStream(filterStream, in.getFormat(), in.getFrameLength()); }
-
-//------------------------------------------------------------------------------
-
-private static class FilterStream extends InputStream {
-
-private static final int     inBufFrames = 4096;
-
-private AudioInputStream     in;
-private AudioFormat          format;
-private int                  channels;
-private int                  frameSize;
-private IirFilter[]          iirFilters;
-private byte[]               inBuf;
-private float[][]            floatBufs;
-
-public FilterStream (AudioInputStream in, IirFilterCoefficients coeffs) {
-   this.in = in;
-   format = in.getFormat();
-   channels = format.getChannels();
-   frameSize = format.getFrameSize();
-   inBuf = new byte[inBufFrames * frameSize];
-   floatBufs = new float[channels][];
-   iirFilters = new IirFilter[channels];
+   int channels = in.getFormat().getChannels();
+   IirFilter[] iirFilters = new IirFilter[channels];
    for (int channel = 0; channel < channels; channel++) {
-      floatBufs[channel] = new float[inBufFrames];
-      iirFilters[channel] = new IirFilter(coeffs); }}
+      iirFilters[channel] = new IirFilter(coeffs); }
+   return SignalFilterAudioInputStream.getAudioInputStream(in, iirFilters); }
 
-@Override
-public int read (byte[] outBuf, int outOffs, int len1) throws IOException {
-   int len2 = Math.min(len1, inBuf.length);
-   int len3 = (len2 / frameSize) * frameSize;
-   int len = in.read(inBuf, 0, len3);
-   if (len <= 0) {
-      return len; }
-   if (len % frameSize != 0) {
-      throw new AssertionError(); }
-   int frames = len / frameSize;
-   AudioIo.unpackAudioStreamBytes(format, inBuf, 0, floatBufs, 0, frames);
-   for (int channel = 0; channel < channels; channel++) {
-      IirFilter iirFilter = iirFilters[channel];
-      float[] floatBuf = floatBufs[channel];
-      for (int i = 0; i < frames; i++) {
-         floatBuf[i] = (float)iirFilter.step(floatBuf[i]); }}
-   AudioIo.packAudioStreamBytes(format, floatBufs, 0, outBuf, outOffs, frames);
-   return len; }
-
-@Override
-public int read() throws IOException {
-   throw new AssertionError(); }
-
-}}
+}
